# rest-api

./: .env  Cargo.toml
src/: config.rs  main.rs  models.rs
src/handlers/: measurement_type.rs  measurements.rs  meteostations.rs  meteostations_sensor.rs  mod.rs  sensors.rs  sensors_measurements.rs
src/routes/: measurement_type.rs  measurements.rs  meteostations.rs  meteostations_sensor.rs  mod.rs  sensors.rs  sensors_measurements.rs
src/tests/: mod.rs  sensors.rs
