[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
sqlx = { version = "0.7.4", features = ["tls-native-tls", "runtime-async-std", "postgres", "chrono", "bigdecimal"] }
serde = { version = "1.0.203", features = ["derive"] }
utoipa = { version = "4.2.3", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.117"
actix-rt = "2.9.0"

# НЕ ОБНОВЛЯТЬ ДО ПОСЛЕДНЕЙ ВЕРСИИ, Т.К. ЛОМАЕТ BigDecimal
bigdecimal = { version = "0.3.1", features = ["serde"] }